--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: [3.1.0]
+        ruby: [3.1.0, 3.1.2]
 
     steps:
       - uses: actions/checkout@v2
